fixed bugs, added overflow, added setInterval to time

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   border-bottom: 1px solid black;
   border-top: 1px solid black;
   height: 500px;
+  overflow-y: scroll;
 }
 .addNoteForm {
   display: flex;
@@ -27,8 +28,8 @@ body {
   height: 30px;
 }
 .addNoteForm button {
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   border-radius: 50px;
   border: 1px solid black;
 }
@@ -41,13 +42,15 @@ body {
   transition: all 1s ease-in-out;
 }
 .note-check {
-  height: 45px;
-  width: 45px;
+  height: 35px;
+  width: 35px;
 }
 .note-text {
   justify-self: flex-start;
   padding-left: 10px;
-  width: 100%;
+  width: 65%;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 .delete-btn {
   height: 45px;
